# jackal_robot

./: ChangeNotes.txt  README.md  rosinstall
rover_base/: CMakeLists.txt  package.xml
rover_base/config/: diagnostic_analyzers.yaml  localization_analyzers.yaml
rover_base/include/rover_base/: rover_diagnostic_updater.h  rover_hardware.h
rover_base/launch/: base.launch
rover_base/scripts/: calibrate_compass  calibrate_compass.bat
rover_base/src/: rover_base.cpp  rover_diagnostic_updater.cpp  rover_hardware.cpp  simple_joy_node.cpp
